@@ -1,3 +1,11 @@
+2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b246
+
+	* Fix 1006567: If an image filename is stripped of disallowed chars,
+	  and the new filename is blank, use newPhotoName() to get a unique name
+	  from the album.
+
+	* Change: Code tweaks in sortPhotos .. no flow changes.
+
 2004-10-22  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b245
 
 	* Fix: Multiple deletion of comments failed.
